<resources>
    <string name="app_name_icare">孝为先</string>
    <string name="loginName">手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="auto_login">下次自动登陆</string>
    <string name="login_fail">系统繁忙，请稍后登陆...</string>
    <string name="my_first_visit">我逛逛先</string>
    <string name="i_dont_have_account">我还没有账号</string>
    <string name="message">消息</string>
    <string name="service">服务</string>
    <string name="remind">提醒</string>
    <string name="more">更多</string>
    <string name="your_username">您的用户名</string>
    <string name="register">注册</string>
    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="your_mobile">您的手机号码</string>
    <string name="mobile_validation_code">手机验证码</string>
    <string name="your_email">您的邮箱</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="email_validation_code">邮箱验证码</string>
    <string name="email_code_have_been_sent">验证码已发送至以下邮箱地址\n请获取验证码以完成绑定</string>
    <string name="me">我</string>
    <string name="not_yet_bind_email">未绑定邮箱</string>
    <string name="my_family">我的家人</string>
    <string name="service_history">服务记录</string>
    <string name="my_pay">我的支付</string>
    <string name="my_bookmark">我的收藏</string>
    <string name="remind_family">提醒家人</string>
    <string name="settings">设置</string>
    <string name="msg_notify">消息通知</string>
    <string name="chat_record">聊天记录</string>
    <string name="account_security">账户安全</string>
    <string name="assessibility">辅助功能</string>
    <string name="feedback">意见反馈</string>
    <string name="help">帮助</string>
    <string name="check_update">检查更新</string>
    <string name="username">用户名</string>
    <string name="gender">性别</string>
    <string name="mobile">手机号码</string>
    <string name="email">邮箱</string>
    <string name="address">地址</string>
    <string name="tag">标签</string>
    <string name="save_logout">安全登出</string>
    <string name="market">商城</string>
    <string name="my_order">我的订单</string>
    <string name="go_order">去下单</string>
    <string name="total">共</string>
    <string name="add_service_local">添加服务地址</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_offline">完成后付款</string>
    <string name="service_describtion">服务描述</string>
    <string name="service_price">服务价格</string>
    <string name="finish_time">完成时间</string>
    <string name="coupon">优惠券</string>
    <string name="add_remark">添加备注</string>
    <string name="add_order">添加订单</string>
    <string name="male">先生</string>
    <string name="female">女士</string>
    <string name="input_service_object_mobile">请填写服务对象手机号，以便服务者联系</string>
    <string name="input_service_object_location">请填写服务地址</string>
    <string name="input_service_object_name">请填写服务对象姓名</string>
    <string name="status">状态</string>
    <string name="all">所有</string>
    <string name="process">进行中</string>
    <string name="expire">已结束</string>
    <string name="sort">排序</string>
    <string name="sort_by_time">按时间</string>
    <string name="sort_by_price">按金额</string>
    <string name="order_tea">饮茶订位</string>
    <string name="health_check">健康体检</string>
    <string name="community_activity">社区活动</string>
    <string name="order_opera_ticket">戏票预定</string>
    <string name="vip_trip">VIP出行</string>
    <string name="vip_insurance">VIP保险</string>
    <string name="latest_server">最新服务</string>
    <string name="provide_service">提供服务</string>
    <string name="my_provided_server">我提供的服务</string>
    <string name="my_bill">我的账单</string>
    <string name="username_cannot_empty">用户名不能空哦!</string>
    <string name="mobile_cannot_empty">手机号码不能空哦!</string>
    <string name="verify_code_cannot_empty">验证码不能空哦！</string>
    <string name="set_your_password">设置您的登陆密码</string>
    <string name="login_password_cannot_empty">登陆密码不能空哦!</string>
    <string name="app_name_pro">孝为先</string>
    <string name="reset_password">重置密码</string>
    <string name="contacts">联系人</string>
    <string name="bind_family">绑定家人</string>
    <string name="ta_is_relation">TA是你的</string>
    <string name="bing_family">绑定家人</string>
    <string name="input_family_username">请输入您家人的名字</string>
    <string name="input_family_mobile">请输入您家人的手机号码</string>
    <string name="input_family_service_address">请输入您家人的地址</string>
    <string name="father">爸爸</string>
    <string name="male_or_female">先生/女士</string>
    <string name="relation_call">爸爸/妈妈/其他</string>
    <string name="binded">已绑定</string>
    <string name="add_family">添加家人</string>
    <string name="set_comment">设置备注</string>
    <string name="add_remind">添加提醒</string>
    <string name="add_event">添加事件</string>
    <string name="get_chat">聊一聊</string>
    <string name="detail_info">详细资料</string>
    <string name="your_password">您的登陆密码</string>
    <string name="verify_password">密码验证</string>
    <string name="delete">删除</string>
    <string name="add_to_destop">添加到桌面</string>
    <string name="str_all">全部</string>
    <string name="service_type">服务类型</string>
    <string name="can_service_time">可服务时间段</string>
    <string name="confirm_order_finish">确认订单完成</string>
    <string name="complain">投诉</string>
    <string name="report">举报</string>
    <string name="order_detail">订单详情</string>
    <string name="order_number">订单号</string>
    <string name="order_content">订单内容</string>
    <string name="order_finish_time">订单完成时间</string>
    <string name="service_object">服务对象</string>
    <string name="contact_method">联系方式</string>
    <string name="service_address">服务地址</string>
    <string name="pay_status">支付状态</string>
    <string name="service_payment">服务费用</string>
    <string name="total_cost">总费用</string>
    <string name="server_name">服务者名字</string>
    <string name="evaluate">评价</string>
    <string name="view_more"><![CDATA[查看更多>>]]></string>
    <string name="write_down_your_evaluate">请写下您对这位服务者的评价</string>
    <string name="submit">提交</string>
    <string name="user_type">用户类型</string>
    <string name="children">子女</string>
    <string name="server">服务者</string>
    <string name="remember_login_user_type">记住用户登陆类型，下次不再提醒.\n(可以在APP 内切换哦!)</string>
    <string name="choose_user">选择服务对象</string>
    <string name="change_to_server">切至服务者</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="verify_code_already_send">验证码已经发送</string>
    <string name="submit_verif_code_success">提交验证码成功</string>
    <string name="verify_success">验证成功!</string>
    <string name="verify_code_is_wrong">验证码错误</string>
    <string name="re_send">重发</string>
    <string name="re_send_verify_code">重发验证码</string>
    <string name="call_phone">拨打</string>
    <string name="total_grade">总体评分</string>
    <string name="accept">接受</string>
    <string name="login_at_another_device">该账户在其他设备登陆, 请重新登入!</string>
    <string name="login_username_cannot_empty">用户名不能为空</string>
    <string name="choose_servant">选择服务者</string>
    <string name="servant_detail">服务者详情</string>
    <string name="bookmark">收藏</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="ease_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="name">姓名</string>
    <string name="remark">备注</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="birthday">生日</string>
</resources>