<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@android:color/holo_red_light">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@mipmap/btn_back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnRight"
            android:layout_toRightOf="@+id/btnBack"
            android:gravity="center_vertical|right"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right"
            android:src="@mipmap/icon_search_white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/status"
                android:textColor="@color/material_grey_600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/all"
                android:textColor="@color/material_grey_850"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtProcess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/process"
                android:textColor="@color/material_grey_850"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/expire"
                android:textColor="@color/material_grey_850"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/material_grey_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/txtSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sort"
                android:textColor="@color/material_grey_600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sort_by_time"
                android:textColor="@color/material_grey_850"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sort_by_price"
                android:textColor="@color/material_grey_850"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/material_grey_100" />

    </LinearLayout>
</LinearLayout>