<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:onClick="onClick"
    android:orientation="vertical">

    <include
        layout="@layout/layout_topbar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/imgHeader"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                fresco:actualImageScaleType="focusCrop"
                fresco:fadeDuration="2000"
                fresco:failureImage="@mipmap/profile_img"
                fresco:failureImageScaleType="centerInside"
                fresco:placeholderImage="@mipmap/profile_img"
                fresco:placeholderImageScaleType="fitCenter"
                fresco:progressBarAutoRotateInterval="2000"
                fresco:progressBarImage="@mipmap/icon_progress_bar"
                fresco:progressBarImageScaleType="centerInside"
                fresco:roundAsCircle="true"
                fresco:roundingBorderColor="@color/white"
                fresco:roundingBorderWidth="1dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/material_grey_100" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/txtKey_UserName"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/name"
                    android:textColor="@color/material_grey_800"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/txtKey_UserName"
                    android:background="@null"
                    android:hint="@string/input_family_username"
                    android:textColor="@color/material_grey_850"
                    android:textSize="14sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/material_grey_100" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/txtKey_Gender"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/gender"
                    android:textColor="@color/material_grey_800"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/txtKey_Gender"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbt_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rbt_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/female" />
                </RadioGroup>

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/material_grey_100" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/txtKey_Mobile"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/mobile"
                    android:textColor="@color/material_grey_800"
                    android:textIsSelectable="false"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/txtKey_Mobile"
                    android:background="@null"
                    android:hint="@string/input_family_mobile"
                    android:textColor="@color/material_grey_850"
                    android:textSize="14sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/material_grey_100" />

            <RelativeLayout
                android:id="@+id/rel_Address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/txtKey_Address"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textColor="@color/material_grey_800"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/txtKey_Address"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/service_address"
                    android:textColor="@color/material_grey_850"
                    android:textSize="14sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/material_grey_100" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/txtKey_Remark"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/remark"
                    android:textColor="@color/material_grey_800"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtRemark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/txtKey_Remark"
                    android:background="@null"
                    android:hint="@string/relation_call"
                    android:textColor="@color/material_grey_850"
                    android:textSize="14sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/material_grey_100" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/txtBirthday"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/birthday"
                    android:textColor="@color/material_grey_800"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtBirthday"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinner_year"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:text="@string/year"
                            android:textColor="@color/material_grey_800"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/spinner_month"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:text="@string/month"
                            android:textColor="@color/material_grey_800"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/spinner_day"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:text="@string/day"
                            android:textColor="@color/material_grey_800"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>